maze.wallfollower.WallFollowerMaze.scala.error
Compilation error:
WallFollowerMaze:3: error: not found: value keepHandOnWall
    keepHandOnWall()
    ^