maze.wallfollower.WallFollowerMaze.scala.code
override def run() {
  while(porteBiscuit()==false) {
    keepHandOnWall()
    if (estSurBiscuit()==true) {
      prendBiscuit()
    }
  }
}

def keepHandOnSideWall() {
  gauche()
  if (estFaceMur()==true) {
    droite()
    if (estFaceMur()==false) {
    avance()
    }
    else {
      droite()
    }
  }
  else {
    avance()
  }
droite()  
}